# VotingSystem

./: .coverage  .gitignore  README.md  TESTING.md  coverage.xml  pyproject.toml  pytest.ini  report.md  setup.cfg  test.db  test_backend.py  voting_system.db
.github/workflows/: quality.yml
backend/: run.py  test_server.py  voting_system.db
backend/app/: main.py
backend/app/application/dtos/: poll_dto.py  user_dto.py  vote_dto.py
backend/app/application/routers/: auth.py  polls.py  users.py
backend/app/application/use_cases/: auth_use_cases.py  poll_use_cases.py  vote_use_cases.py
backend/app/domain/: schemas.py
backend/app/domain/entities/: poll.py  user.py  vote.py
backend/app/domain/repositories/: poll_repository.py  user_repository.py  vote_repository.py
backend/app/domain/services/: auth_service.py
backend/app/infrastructure/database/: __init__.py  database.py  models.py
backend/app/infrastructure/security/: auth.py
frontend/: app.py
tests/: README.md  conftest.py
tests/integration/: test_auth_api.py  test_poll_api.py  test_polls_api.py
tests/performance/: locustfile.py
tests/security/: test_security.py
tests/ui/: test_ui.py
tests/unit/: test_database.py  test_domain_entities.py  test_repositories.py  test_security.py
