[tool.poetry]
name = "voting-system"
version = "0.1.0"
description = "Voting System application for SQRS course"
authors = ["Student"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.28"
pydantic = {extras = ["email"], version = "^2.6.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
streamlit = "^1.31.0"
requests = "^2.31.0"
httpx = "^0.27.0"
email-validator = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
flake8 = "^7.0.0"
pytest-cov = "^4.1.0"
hypothesis = "^6.92.1"
mutmut = "^2.4.4"
locust = "^2.19.1"
selenium = "^4.17.2"
webdriver-manager = "^4.0.1"
bandit = "^1.7.6"
coverage = "^7.4.1"
mypy = "^1.8.0"
isort = "^5.13.2"
types-requests = "^2.31.0.20240125"
aiosqlite = "^0.19.0"
pytest-html = "^4.1.1"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.coverage.run]
source = ["backend/app"]
omit = ["*/tests/*", "*/migrations/*", "*/__init__.py", "*/settings.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mutmut]
paths_to_mutate = "backend/app/"
runner = "pytest"
tests_dir = "tests/"
